# opencv-cupy-cuda-benchmarks

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/benchmark/: __main__.py  bg_subtraction.py  bg_subtraction_benchmark.py  cupy_benchmark.py
src/benchmark/utils/: logger.py
