[project]
name = "benchmark"
version = "0.1.0"
description = "GPU vs CPU performance examples using OpenCV CUDA and CuPy "
readme = "README.md"
requires-python = ">=3.11.13"


dependencies = [
    "cupy-cuda11x>=13.0.0",
    "numpy>=2.3.3",
    "pyjokes>=0.8.3",
    "rich>=14.2.0",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pandas-stubs>=2.3.2.250926",
    "pylint>=3.3.7",
    "pytest-mock>=3.14.1",
    "scipy-stubs>=1.16.2.4",
    "types-defusedxml>=0.7.0.20250822",
    "types-openpyxl>=3.1.5.20250919",
    "types-pygments>=2.19.0.20250809",
    "types-python-dateutil>=2.9.0.20251008",
    "types-xlrd>=2.0.0.20251020",
]


# Command-line scripts for installations
#[project.scripts]
# For example:
# cmdline_tool = "cmdline.tool_cli:main"

# Build a big ol' dist with hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.black]
line-length = 100
